--- a/React/index.html
+++ b/React/index.html
@@ -21,6 +21,18 @@
         button {
             font-family: 'Oswald', sans-serif;
         }
+        .div-fixed {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding:20px;
+        }
+        .bullet {
+            align-self: center;
+            margin:20px;
+            margin-top:55px;
+        }
+
     </style>
 </head>
 <body>
@@ -28,7 +40,5 @@
     <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
     <script src="/scripts/app.js"></script>
-    <br/>
-    <div style="font-size:10px">Svg made by <a href="https://www.flaticon.com/authors/flat-icons" title="Flat Icons">Flat Icons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 </body>
 </html>
