--- a/React/index.html
+++ b/React/index.html
@@ -21,16 +21,29 @@
         button {
             font-family: 'Oswald', sans-serif;
         }
-        .div-fixed {
+        .ImgOutput-cont {
             display: flex;
             flex-wrap: wrap;
+            /* justify-content: center; */
+        }
+        .subflex {
+            display: flex;
             justify-content: center;
-            padding:20px;
+            flex-wrap: wrap;
+        }
+        .break {
+            flex-basis: 100%;
+            height: 0;
         }
         .bullet {
             align-self: center;
-            margin:20px;
-            margin-top:55px;
+            /* margin:35px; */
+            margin-top:5px;
+        }
+        .header-fixed {
+            display: flex;
+            align-items: center;
+            gap: 7px;
         }
 
     </style>
