--- a/React/index.html
+++ b/React/index.html
@@ -24,7 +24,7 @@
         .ImgOutput-cont {
             display: flex;
             flex-wrap: wrap;
-            /* justify-content: center; */
+            justify-content: center;
         }
         .subflex {
             display: flex;
