--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <ul>
-    <li><a href="">React app example</a></li>
+    <li><a href="https://rileydlynch.github.io/Mock-projects/React/index.html">React app example</a></li>
   </ul>
 </body>
 </html>
